Fix the jumping horizontal menu on the menu page

--- a/app/styles/menu.css
+++ b/app/styles/menu.css
@@ -97,6 +97,7 @@
 
 #menu-nav .km-button {
     font-size: 20px;
+    border-bottom: 3px solid white;
 }
 
 #menu-nav .km-state-active {
